[package]
name = "bumpslab"
version = "0.2.0"
edition = "2021"
description = "A slab allocator with stable references"
repository = "https://github.com/jkelleyrtp/bumpslab"
keywords = ["memory", "layout", "allocator", "slab"]
categories = ["memory-management"]
license = "MIT"
authors = ["Jonathan Kelley <jkelleyrtp@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.11.1" }

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
